# pcproxy

pcproxy-1.1.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  bootstrap  configure  configure.in
pcproxy-1.1.1/doc/: Makefile.am  Makefile.in  Manual.html
pcproxy-1.1.1/etc/: Makefile.am  Makefile.in  pcproxy.ini
pcproxy-1.1.1/lib/: Makefile.am  Makefile.in  access.tcl  core.tcl  flightplans.tcl  fpserver.tcl  gui.tcl  settings.tcl
pcproxy-1.1.1/man/: Makefile.am  Makefile.in  pcproxy.pod.in
